# WorkFlow

./: CMakeLists.txt  main.cpp
src/: ConReader.cpp  ConReader.h  WorkflowExecutor.cpp  WorkflowExecutor.h
src/blocks/: Dump.cpp  Dump.h  Factory.cpp  Factory.h  Grep.cpp  Grep.h  IWorker.cpp  IWorker.h  Read.cpp  Read.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  Write.cpp  Write.h
